Fix investigation stages 4-5 after review
Stage 4: Replace inferred pseudo-assembly with actual native asmjit dump
captured via cairo.sql.jit.debug.enabled=true. The native hot loop for
`l > 42` uses AVX2 with `vpcmpgtq` (not `vpcmpgtb` as previously
claimed), null checks via `vpcmpeqq`, and PEXT+PDEP+VPERMPS compress.
The native backend wastes one `vpcmpeqq` per chunk comparing constant 42
against LONG_NULL (always false, not constant-folded by asmjit).

NativeJitAsmDumpDriver uses SqlJitMode.JIT_MODE_ENABLED (= 0) — the
previous version incorrectly used setJitMode(1) which is FORCE_SCALAR.

Stage 5: Remove fabricated per-cause percentages. The attribution is now
explicitly structural (instruction-level comparison) rather than measured.
No per-cause timing isolation was performed. Fix the stale "IN() not
vectorized" claim — IN() IS vectorized for single-size columns.

Fix reproduction commands in Stages 2 and 3: `2>&1 > file` does not
capture stderr into the file; corrected to `> file 2>&1`.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>